Fix z-index + centering on large screen

--- a/frontend/src/Hub.css
+++ b/frontend/src/Hub.css
@@ -6,6 +6,7 @@
   align-items: center;
   width: 100%;
   max-width: 1400px;
+  margin: 0 auto;
   padding: 0rem 4rem 4rem;
   z-index: 10;
 }
